Correct main div on desktop aligne center

--- a/src/views/MainPage.module.css
+++ b/src/views/MainPage.module.css
@@ -4,6 +4,8 @@
   padding: 0;
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
 }
 
